--- a/Quiz_Challenge/Assets/css/style.css
+++ b/Quiz_Challenge/Assets/css/style.css
@@ -1,35 +1,22 @@
-*,*::before,
-*::after{box-sizing:border-box;
-}
-div {
-    border: 1px solid black;
-    padding: 25px 50px;
-    background-color: #eff5f8;
-}
-
-h2 {
-    font-size: 3em;
-    margin: 0px;
-    margin-top: 0.45em;
-    margin-bottom: 0.45em;
-    text-align: center;
-    
-}
-button {
-    background-color: #001b44;
-    border-radius: 8px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.2em;
-    letter-spacing: 0.21px;
-    text-align: center;
-    transition-duration: 0.15;
-    transition-property: background-color;
-    transition-timing-function: linear;
-    margin-top: 0.6em;
-    float: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+*{
+    padding: 0;
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
 }
 .hide{
     display: none;
-    
+}
+body{
+    background: rgb(157, 225, 236);
+}
+.wrap{
+    background:#fff;
+    width: 90%;
+    max-width: 600px;
+    margin:100px auto 0;
+    border-radius: 10px;
+    padding:30px;
+
 }
