--- a/Quiz_Challenge/Assets/css/style.css
+++ b/Quiz_Challenge/Assets/css/style.css
@@ -8,15 +8,54 @@
 .hide{
     display: none;
 }
-body{
-    background: rgb(157, 225, 236);
+.h2{
+    font-size: 18px;
+    color: #001e4d;
+    font-weight: 600;
+
 }
-.wrap{
+body{
+    background: rgb(19, 197, 224);
+}
+.wrapper{
     background:#fff;
     width: 90%;
     max-width: 600px;
     margin:100px auto 0;
     border-radius: 10px;
     padding:30px;
+}
+.wrapper h1{
+    font-size: 40px;
+    color: #001e4d;
+    font-weight: 700;
+    padding-bottom:30px;
+}
 
+.wrapper h2{
+    font-size: 30;
+    color:#001e4d;
+    font-weight: 600; 
+    padding-bottom: 30px;
+}
+button{
+    padding: 10px;
+    margin: 24px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 24px;
+    background-color: #247BA0;
+    color: white;
+}
+feedback correct{
+    font-size: 30;
+    color: greenyellow;
+    font-weight: 600;
+    padding-bottom: 30px;
+}
+feedback wrong{
+    font-size: 30;
+    color: red;
+    font-weight: 600;
+    padding-bottom: 30px;
 }
