--- a/Quiz_Challenge/Assets/css/style.css
+++ b/Quiz_Challenge/Assets/css/style.css
@@ -61,3 +61,9 @@ feedback wrong{
     padding-bottom: 30px;
 }
 
+.li{
+    background-color: antiquewhite;
+    font-size: 30;
+    font-weight: 300;
+    padding-bottom: 30px;
+}
